@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.25 2002/08/25 22:58:19 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.26 2002/08/27 19:19:45 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -3333,9 +3333,8 @@ get_printer_attrs(client_t        *con,	/* I - Client connection */
 
   add_printer_state_reasons(con, printer);
 
-  if (printer->state_message[0])
-    ippAddString(con->response, IPP_TAG_PRINTER, IPP_TAG_TEXT,
-                 "printer-state-message", NULL, printer->state_message);
+  ippAddString(con->response, IPP_TAG_PRINTER, IPP_TAG_TEXT,
+               "printer-state-message", NULL, printer->state_message);
 
   ippAddBoolean(con->response, IPP_TAG_PRINTER, "printer-is-accepting-jobs",
                 printer->accepting);
@@ -3482,9 +3481,8 @@ get_printers(client_t *con,		/* I - Client connection */
 
       add_printer_state_reasons(con, printer);
 
-      if (printer->state_message[0])
-	ippAddString(con->response, IPP_TAG_PRINTER, IPP_TAG_TEXT,
-                     "printer-state-message", NULL, printer->state_message);
+      ippAddString(con->response, IPP_TAG_PRINTER, IPP_TAG_TEXT,
+                   "printer-state-message", NULL, printer->state_message);
 
       ippAddBoolean(con->response, IPP_TAG_PRINTER, "printer-is-accepting-jobs",
                     printer->accepting);
@@ -6029,5 +6027,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.25 2002/08/25 22:58:19 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.26 2002/08/27 19:19:45 mike Exp $".
  */
